<resources>
    <string name="app_name">Nemurin</string>
    <string name="action_settings">Settings</string>
    <string name="food_label">FOOD</string>
    <string name="shower_label">SHOWER</string>
    <string name="hobby_label">HOBBY</string>
    <string name="title_activity_settings">Settings</string>
    <string name="emulator_deftime_label">23:00</string>
    <string name="emulator_defcalc_label">40</string>
    <string name="top_up_label">SLEEP   AT</string>
    <string name="button_top_label">CHECK</string>
    <string name="unti_label">まで</string>
    <string name="min_label">min</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="SettingsOpen_onClick">SettingsOpen_onClick</string>
    <string name="sleep_time">23時30分までにねる</string>
    <string name="sleep">23時30分までにねる</string>
    <string name="sleeping">23時までにねる</string>
    <string name="sleepat">SLEEP AT</string>
    <string name="food_until">まで</string>
    <string name="food_calc">25</string>
    <string name="food_set_number">40</string>
    <string name="shower_set_number">40</string>
    <string name="hobby_set_number">40</string>
    <string name="save_button_label">SAVE</string>


</resources>
