<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/sleep_time_label"
        android:layout_width="175dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        android:text="@string/top_up_label"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sleep_time"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sleep_time"
        android:layout_width="138dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/emulator_deftime_label" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_back_style"
        android:text="@string/button_top_label"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_time" />

    <TextView
        android:id="@+id/food_back"
        android:layout_width="166dp"
        android:layout_height="93dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/food_back_style"
        android:gravity="center_horizontal"
        android:text="@string/food_label"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shower_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/food_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/emulator_deftime_label"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/food_back"
        app:layout_constraintStart_toStartOf="@+id/food_back"
        app:layout_constraintTop_toTopOf="@+id/food_back"
        app:layout_constraintVertical_bias="0.475" />

    <EditText
        android:id="@+id/food_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:singleLine="true"
        android:text="@string/emulator_defcalc_label"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/food_time"
        app:layout_constraintStart_toStartOf="@+id/food_time"
        app:layout_constraintTop_toTopOf="@+id/food_back"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/food_min"
        android:layout_width="26dp"
        android:layout_height="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/min_label"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/food_back"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/food_calc"
        app:layout_constraintTop_toTopOf="@+id/food_back" />

    <TextView
        android:id="@+id/food_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/unti_label"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/food_back"
        app:layout_constraintEnd_toEndOf="@+id/food_back"
        app:layout_constraintStart_toEndOf="@+id/food_time"
        app:layout_constraintTop_toBottomOf="@+id/food_calc" />

    <TextView
        android:id="@+id/shower_back"
        android:layout_width="170dp"
        android:layout_height="94dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/food_back_style"
        android:gravity="center_horizontal"
        android:text="@string/shower_label"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/food_back"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/shower_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/emulator_deftime_label"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/shower_back"
        app:layout_constraintEnd_toStartOf="@+id/shower_calc"
        app:layout_constraintStart_toStartOf="@+id/shower_back"
        app:layout_constraintTop_toTopOf="@+id/shower_back" />

    <TextView
        android:id="@+id/shower_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/unti_label"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/shower_back"
        app:layout_constraintEnd_toEndOf="@+id/shower_back"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/shower_time"
        app:layout_constraintTop_toBottomOf="@+id/shower_calc" />

    <EditText
        android:id="@+id/shower_calc"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:text="@string/emulator_defcalc_label"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/shower_min"
        app:layout_constraintTop_toTopOf="@+id/shower_back" />

    <TextView
        android:id="@+id/shower_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/min_label"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/shower_back"
        app:layout_constraintTop_toTopOf="@+id/shower_calc" />

    <TextView
        android:id="@+id/hobby_back"
        android:layout_width="174dp"
        android:layout_height="95dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hobby_back_style"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_back"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/hobby_time"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/emulator_deftime_label"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/hobby_back"
        app:layout_constraintEnd_toStartOf="@+id/hobby_calc"
        app:layout_constraintStart_toStartOf="@+id/hobby_back"
        app:layout_constraintTop_toTopOf="@+id/hobby_back" />

    <TextView
        android:id="@+id/hobby_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/unti_label"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/hobby_back"
        app:layout_constraintEnd_toEndOf="@+id/hobby_back"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/hobby_time"
        app:layout_constraintTop_toBottomOf="@+id/hobby_time"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/hobby_calc"
        android:layout_width="27dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:gravity="center_vertical|center_horizontal|center"
        android:inputType="number"
        android:text="@string/emulator_defcalc_label"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/hobby_min"
        app:layout_constraintTop_toTopOf="@+id/hobby_back" />

    <TextView
        android:id="@+id/hobby_min"
        android:layout_width="25dp"
        android:layout_height="23dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"

        android:layout_marginTop="16dp"
        android:text="@string/min_label"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/hobby_back"
        app:layout_constraintTop_toTopOf="@+id/hobby_back" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/hobby_label"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/hobby_back"
        app:layout_constraintStart_toStartOf="@+id/hobby_back"
        app:layout_constraintTop_toTopOf="@+id/hobby_back" />

</android.support.constraint.ConstraintLayout>